Auto-refresh: add native macOS FSEvents transport
Use a JDK 25 FFM FSEvents stream with exact path callbacks and overflow
reporting, selected for macOS while preserving the JDK watcher elsewhere.
Spawned daemon owners enable native access explicitly.